--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,9 @@ test-skip = ["*universal2:arm64"]
 # Setuptools bug causes collision between pypy and cpython artifacts
 before-build = "rm -rf {project}/build"
 
+[tool.cibuildwheel.linux]
+before-all = "if command -v yum; then yum install -y libatomic; elif command -v apk; then apk add --no-cache libatomic; fi"
+
 [tool.ruff]
 target-version = "py37"
 
